--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "export": "next export -o public",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
